2010-10-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (cp_free): Prevent use-after-free error if a plot
	structure containing dynamically allocated data is reused for a later
	plot.

	* src/color.c (make_palette) src/getcolor.c (rgb1maxcolors_from_gray)
	docs/gnuplot.doc:
	Revamp the interaction of `set palette maxcolors` and defined palettes.
	Up until now, `set palette maxcolors N` meant both "allocate N colors"
	and "divide the color range into N equal parts".  This meant that a
	user-defined palette that used unequal divisions of the total range
	interacted badly with a limited number of palette colors.  Now we 
	guarantee that in the case of defined palette ranges, a gray value is
	never mapped to a color outside its proper range even if the ranges
	are very unevenly spaced.  If more color ranges are defined than the
	value of maxcolors, this may (or may not) result in increasing the
	effective value of maxcolors.  Terminals that strictly enforce
	maxcolors post facto (e.g. x11) do not benefit from this change.

	* configure.in src/datafile.c src/eval.c src/plot.c src/show.c
	term/lua.trm:  Remove conditional flag HAVE_ISNAN.
	Apparently we have been getting along OK with an unprotected call 
	to isnan() since Oct 2009.  That would seem to be good evidence 
	that we can remove the #ifdef protection elsewhere as well.

2010-09-30  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (store_label eval_plots): Fix bug introduced by my patch
	of 2010-09-08 (references to uninitialized variables were found by 
	valgrind).

2010-09-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_inside_color_smooth_box_bitmap):
	The color box is constructed from 128 segments.  If any of these
	straddles a boundary within a defined palette, split it into 2 segments
	so that discrete color transitions are described with pixel accuracy.
	This does not fix imprecision in the palette itself, which can result